Exercícios para casa Semana 4 turma on33 Jéssica Bom

--- a/exercicios/para-casa/exercicios_casa_JessicaBom.ipynb
+++ b/exercicios/para-casa/exercicios_casa_JessicaBom.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCÍCIO 32:\n",
+    "#### EXERCÍCIO 32:\n",
     "Faça um programa que calcule o fatorial de um número inteiro fornecido pelo usuário. Ex.: 5!=5.4.3.2.1=120. A saída deve ser conforme o exemplo abaixo:\n",
     "\n",
-    "> Fatorial de: 5\n",
+    "> Fatorial de: 5  \n",
     "> 5! =  5 . 4 . 3 . 2 . 1 = 120\n"
    ]
   },
@@ -46,7 +46,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCÍCIO 36:\n",
+    "### EXERCÍCIO 36:\n",
     "Desenvolva um programa que faça a tabuada de um número qualquer inteiro que será digitado pelo  usuário, mas a tabuada não deve necessariamente iniciar em 1 e terminar em 10, o valor inicial e final devem ser informados também pelo usuário, conforme exemplo abaixo:\n",
     "\n",
     "> Montar a tabuada de: 5\n",
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# EXERCÍCIO 38:\n",
+    "### EXERCÍCIO 38:\n",
     "\n",
     "Um funcionário de uma empresa recebe aumento salarial anualmente: Sabe-se que:\n",
     "\n",
