exercicio casa logica semana 4

--- a/exercicios/para-sala/exercicios_for.ipynb
+++ b/exercicios/para-sala/exercicios_for.ipynb
@@ -238,6 +238,33 @@
     "    \n",
     "print(f\"A soma dos primeiros 5 números naturais é: {soma}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A média dos números é: 46.57\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeros = [23, 45, 12, 67 , 89 , 34 , 56]\n",
+    "\n",
+    "soma = 0\n",
+    "\n",
+    "for num in numeros : \n",
+    "    soma = soma + num \n",
+    "\n",
+    "    media = soma / len (numeros)\n",
+    "\n",
+    "print(f\"A média dos números é: {media:.2f}\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
@@ -256,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
