Atualização do exercício 38

--- a/exercicios/para-casa/LidianeGomes.ipynb
+++ b/exercicios/para-casa/LidianeGomes.ipynb
@@ -78,14 +78,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O salário atual do funcionário é de R$ 4,345.00\n"
+      "O salário atual em 2024 do funcionário é de R$ 23,631.74\n"
      ]
     }
    ],
@@ -94,15 +94,14 @@
     "ano_inicial = int(input(\"Digite o ano em que o funcionário entrou na empresa: \"))\n",
     "ano_atual = int(input(\"Digite o ano atual: \"))\n",
     "porcentagem = 1.5 / 100\n",
-    "salario_atual = salario\n",
     "\n",
     "for ano in range(ano_inicial, ano_atual + 1):\n",
-    "    salario_atual += salario * porcentagem\n",
+    "    salario += salario * porcentagem\n",
     "    if ano <= 1997:\n",
     "        porcentagem *= 2\n",
-    "    #print(f\"Em {ano} e salário é de R$ {salario_atual:.2f}\")\n",
+    "    #print(f\"Em {ano} e salário é de R$ {salario:.2f}\")\n",
     "\n",
-    "print(f\"O salário atual do funcionário é de R$ {salario_atual:,.2f}\")"
+    "print(f\"O salário atual em {ano} do funcionário é de R$ {salario:,.2f}\")"
    ]
   },
   {
