correção entrega semana 4

--- a/exercicios/lari_schmillevitch/atividade.ipynb
+++ b/exercicios/lari_schmillevitch/atividade.ipynb
@@ -76,21 +76,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O salário atual do funcionário em 2024 é: R$ 4464.44\n"
+      "O salário atual do funcionário em 2024 é: R$ 129560333389242195435322871303508747683992225891693468624534108931804120725061632.00\n"
      ]
     }
    ],
    "source": [
     "# Exercício 38\n",
     "\n",
-    "salario_inicial = 1000.00\n",
+    "salario_inicial = float(input(\"Digite o salário inicial do funcionário: \"))\n",
+    "\n",
     "ano_contratacao = 1995\n",
     "\n",
     "percentual_aumento = 1.5 / 100\n",
