alteração exercicio semana 4

--- a/exercicios/para-casa/eliane-ferreira/exercicio_casa.ipynb
+++ b/exercicios/para-casa/eliane-ferreira/exercicio_casa.ipynb
@@ -9,30 +9,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 x 4 = 12\n",
-      "3 x 4 = 12\n",
-      "Final\n"
+      "5 x 0 = 0\n",
+      "5 x 1 = 5\n",
+      "5 x 2 = 10\n",
+      "5 x 3 = 15\n",
+      "5 x 4 = 20\n",
+      "5 x 5 = 25\n",
+      "5 x 6 = 30\n",
+      "5 x 7 = 35\n",
+      "5 x 8 = 40\n",
+      "5 x 9 = 45\n",
+      "5 x 10 = 50\n",
+      " \n"
      ]
     }
    ],
    "source": [
     "multiplicador = int(input('Digite um número'))\n",
-    "contador = int(input('Digite o segundo número'))\n",
+    "inicial = int(input('Digite o número para tabuada'))\n",
+    "final= int(input('Digite o número final'))\n",
     "\n",
-    "for i in range(2,4,1):\n",
-    "    resultado = multiplicador * contador\n",
-    "    print(f\"{multiplicador} x {contador} = {resultado}\")\n",
+    "for i in range(inicial,final+1):\n",
+    "    resultado = multiplicador * i\n",
+    "    print(f\"{multiplicador} x {i} = {resultado}\")\n",
     "    #i += 3\n",
     "    \n",
-    "print(\"Final\")\n",
-    "\n",
     "\n",
     "#num = int(input(\"Digite um número:\"))\n",
     "#num2 = int(input('Digite o segundo número'))\n",
@@ -57,28 +65,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O Fatorial de 5! é 120"
+      "5! = 5.4.3.2.1=120\n"
      ]
     }
    ],
    "source": [
     "num = int(input('Calcule o fatorial de :'))\n",
     "fatorial = 1\n",
+    "fatores = []\n",
     "\n",
     "\n",
     "for i in range (num,0,-1):\n",
     "   fatorial = fatorial * i \n",
+    "   fatores.append(str(i))   \n",
+    "\n",
+    "fatorial_str = f\"{num}! = {'.'.join(fatores)} = {fatorial}\"\n",
+    "print(fatorial_str)\n",
     "\n",
     "\n",
-    "\n",
-    "print(f'O Fatorial de {num}! é {fatorial}', end='' )\n",
     "\n"
    ]
   },
@@ -117,15 +128,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Salario atual do funcionario acrescido de 15% é: 2030.0\n",
-      "O salario com aumento dobrado é : 2030.03\n"
+      "Salario atual do funcionario acrescido de 15% é: 1015.0\n",
+      "O salario com aumento dobrado é : 1015.03\n"
      ]
     }
    ],
