--- a/FRANCITELMA/exercicios_casa.ipynb
+++ b/FRANCITELMA/exercicios_casa.ipynb
@@ -68,14 +68,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Salário no ano de 2024: R$ 5041.52\n"
+      "Salário no ano de 2024: R$ 23631.74\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
     "\n",
     "salario = salario_inicial   \n",
     "\n",
-    "for i in range(ano_inicio + 1, ano_atual + 1):  \n",
+    "for i in range(ano_inicio, ano_atual + 1):  \n",
     "      salario += salario * percentual_de_aumento \n",
     "      if i <= 1997:                                \n",
     "        percentual_de_aumento *= 2\n",
@@ -120,7 +120,7 @@
     "\n",
     "salario = salario_inicial   \n",
     "\n",
-    "for i in range(ano_inicio + 1, ano_atual + 1):  \n",
+    "for i in range(ano_inicio, ano_atual + 1):  \n",
     "      salario += salario * percentual_de_aumento \n",
     "      if i <= 1997:                                \n",
     "        percentual_de_aumento *= 2\n",
@@ -136,6 +136,11 @@
     "Fatorial de: 5\n",
     "5! =  5 . 4 . 3 . 2 . 1 = 120"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -164,6 +169,24 @@
     "    \n",
     "print(f\"Fatorial de: {numero} \\n {numero}! = {sequencia} = {mult}\")\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input('calcule o fatorial de:'))\n",
+    "fatorial = 1\n",
+    "fatores = []\n",
+    "\n",
+    "for i in range(num, 0, -1):\n",
+    "    fatorial = fatorial * i\n",
+    "    fatores.append(str(i)) \n",
+    "\n",
+    "fatorial_str = f'{num}! = {'.'.join(fatores)} = {fatorial}'\n",
+    "print('fatorial_str')"
    ]
   }
  ],
