Atividade para casa Semana04

--- a/Carolyne-Oliveira/EstruturaDeRepeticao.ipynb
+++ b/Carolyne-Oliveira/EstruturaDeRepeticao.ipynb
@@ -106,14 +106,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "O salário atual deste funcionário é de: R$ 7991153224284128798258150233991349427319130527005635733005380091904.00\n"
+      "O salário atual deste funcionário é de: R$ 21099.77\n"
      ]
     }
    ],
@@ -122,25 +122,96 @@
     "salario_inicial = float(1000)\n",
     "#Aumento salarial\n",
     "aumento_inicial = float(1.5/100)\n",
+    "#ano de contratacao\n",
+    "ano_contratacao = 1995\n",
+    "#ano atual\n",
+    "ano_atual = 2023\n",
     "\n",
     "#calcular o salário anual\n",
-    "for ano in range(1996, 2023):\n",
+    "for ano in range(1995, 2023 +1):\n",
     "    salario_inicial += salario_inicial * aumento_inicial\n",
-    "    aumento_inicial *= 2 \n",
+    "    if ano <= 1997:\n",
+    "       aumento_inicial *= 2 \n",
     "\n",
     "print(f'O salário atual deste funcionário é de: R$ {salario_inicial:.2f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Seu salário atual é de: R$ 7.991153224284129e+66\n"
+      "Seu salário atual é de: R$ 42199.54\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Usuario digita seu salário inicial\n",
+    "salario_inicial = float(input('Digite o salário inicial do funcionário em reais: '))\n",
+    "\n",
+    "#ano de contratacao\n",
+    "ano_contratacao = 1995\n",
+    "\n",
+    "#ano atual\n",
+    "ano_atual = 2023\n",
+    "\n",
+    "#Variavel de aumento de salário anual.\n",
+    "aumento_inicial = 1.5 / 100\n",
+    "\n",
+    "#calcular o salário anual\n",
+    "for ano in range(ano_contratacao, ano_atual + 1):\n",
+    "    salario_inicial += salario_inicial * aumento_inicial\n",
+    "    if ano <= 1997:\n",
+    "       aumento_inicial *= 2\n",
+    "\n",
+    "print(f'Seu salário atual é de: R$ {salario_inicial:.2f}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Em 1995 o seu salário foi de R$ 1015.00\n",
+      "Em 1996 o seu salário foi de R$ 1045.45\n",
+      "Em 1997 o seu salário foi de R$ 1108.18\n",
+      "Em 1998 o seu salário foi de R$ 1241.16\n",
+      "Em 1999 o seu salário foi de R$ 1390.10\n",
+      "Em 2000 o seu salário foi de R$ 1556.91\n",
+      "Em 2001 o seu salário foi de R$ 1743.74\n",
+      "Em 2002 o seu salário foi de R$ 1952.99\n",
+      "Em 2003 o seu salário foi de R$ 2187.34\n",
+      "Em 2004 o seu salário foi de R$ 2449.83\n",
+      "Em 2005 o seu salário foi de R$ 2743.81\n",
+      "Em 2006 o seu salário foi de R$ 3073.06\n",
+      "Em 2007 o seu salário foi de R$ 3441.83\n",
+      "Em 2008 o seu salário foi de R$ 3854.85\n",
+      "Em 2009 o seu salário foi de R$ 4317.43\n",
+      "Em 2010 o seu salário foi de R$ 4835.52\n",
+      "Em 2011 o seu salário foi de R$ 5415.79\n",
+      "Em 2012 o seu salário foi de R$ 6065.68\n",
+      "Em 2013 o seu salário foi de R$ 6793.56\n",
+      "Em 2014 o seu salário foi de R$ 7608.79\n",
+      "Em 2015 o seu salário foi de R$ 8521.84\n",
+      "Em 2016 o seu salário foi de R$ 9544.46\n",
+      "Em 2017 o seu salário foi de R$ 10689.80\n",
+      "Em 2018 o seu salário foi de R$ 11972.58\n",
+      "Em 2019 o seu salário foi de R$ 13409.29\n",
+      "Em 2020 o seu salário foi de R$ 15018.40\n",
+      "Em 2021 o seu salário foi de R$ 16820.61\n",
+      "Em 2022 o seu salário foi de R$ 18839.08\n",
+      "Em 2023 o seu salário foi de R$ 21099.77\n",
+      "\n",
+      "\n",
+      "Seu salário atual é de: R$ 21099.77\n"
      ]
     }
    ],
@@ -149,17 +220,23 @@
     "salario_inicial = float(input('Digite seu salário em reais: '))\n",
     "\n",
     "#ano de contratacao\n",
-    "ano_contratacao = 1995\n",
+    "ano_contratacao = int(input('Digite seu ano de contratacao: '))\n",
+    "\n",
+    "#ano atual\n",
+    "ano_atual = int(input('Digite o ano atual: '))\n",
     "\n",
     "#Variavel de aumento de salário anual.\n",
-    "aumento_inicial = float(1.5/100)\n",
+    "aumento_inicial = 1.5 / 100\n",
     "\n",
     "#calcular o salário anual\n",
-    "for ano in range(1996, 2023):\n",
+    "for ano in range(ano_contratacao, ano_atual + 1):\n",
     "    salario_inicial += salario_inicial * aumento_inicial\n",
-    "    aumento_inicial *= 2 \n",
-    "\n",
-    "print(f'Seu salário atual é de: R$ {salario_inicial}')\n"
+    "    if ano <= 1997:\n",
+    "       aumento_inicial *= 2\n",
+    "    print(f'Em {ano} o seu salário foi de R$ {salario_inicial:.2f}') \n",
+    "print('')\n",
+    "print('')\n",
+    "print(f'Seu salário atual é de: R$ {salario_inicial:.2f}')"
    ]
   }
  ],
