--- a/exercicios/para-casa/flavienneMarins/exercicio.ipynb
+++ b/exercicios/para-casa/flavienneMarins/exercicio.ipynb
@@ -147,6 +147,74 @@
     "    print(f\"Salário em {ano_atual}: R$ {salario_atual:.2f}\")\n",
     "    ano_atual += 1"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alteração do programa permitindo que o usuário digite o salário inicial do funcionário."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Salário em 1996: R$ 507.50\n",
+      "Salário em 1997: R$ 522.72\n",
+      "Salário em 1998: R$ 554.09\n",
+      "Salário em 1999: R$ 620.58\n",
+      "Salário em 2000: R$ 769.52\n",
+      "Salário em 2001: R$ 1138.89\n",
+      "Salário em 2002: R$ 2232.22\n",
+      "Salário em 2003: R$ 6518.08\n",
+      "Salário em 2004: R$ 31547.49\n",
+      "Salário em 2005: R$ 273832.23\n",
+      "Salário em 2006: R$ 4479895.35\n",
+      "Salário em 2007: R$ 142102280.41\n",
+      "Salário em 2008: R$ 8872866388.65\n",
+      "Salário em 2009: R$ 1099170688226.50\n",
+      "Salário em 2010: R$ 271231359026771.03\n",
+      "Salário em 2011: R$ 133586868947865264.00\n",
+      "Salário em 2012: R$ 131454822519457333248.00\n",
+      "Salário em 2013: R$ 258582152281574122455040.00\n",
+      "Salário em 2014: R$ 1017044978067796040102182912.00\n",
+      "Salário em 2015: R$ 7999384206896197140744341815296.00\n",
+      "Salário em 2016: R$ 125827433796162698493638316459556864.00\n",
+      "Salário em 2017: R$ 3958314644041149209136052025623723376640.00\n",
+      "Salário em 2018: R$ 249039582486049536522253051212112175495643136.00\n",
+      "Salário em 2019: R$ 31336680548969507987294226003776897207937880031232.00\n",
+      "Salário em 2020: R$ 7886165211076448356518431684476809994657210752579928064.00\n",
+      "Salário em 2021: R$ 3969244800902665893446347104101542528572443272831464154071040.00\n",
+      "Salário em 2022: R$ 3995576612142062154262560176728792352799662211292099674990304034816.00\n",
+      "Salário em 2023: R$ 8044162219551284506666947632382084541887602067331150098630520204668436480.00\n",
+      "Salário em 2024: R$ 32390083347310535694794259256228849681244596014119327294246602164312123392393216.00\n"
+     ]
+    }
+   ],
+   "source": [
+    "salario_inicial = float(input(\"Digite o salário inicial do funcionário: \"))\n",
+    "\n",
+    "aumento_percentual = 1.5 / 100\n",
+    "\n",
+    "salario_1996 = salario_inicial * (1 + aumento_percentual)\n",
+    "\n",
+    "print(f\"Salário em 1996: R$ {salario_1996:.2f}\")\n",
+    "\n",
+    "ano_atual = 1997\n",
+    "salario_atual = salario_1996  \n",
+    "\n",
+    "while ano_atual <= 2024:\n",
+    "    aumento_percentual *= 2  \n",
+    "    salario_atual *= (1 + aumento_percentual)  \n",
+    "    print(f\"Salário em {ano_atual}: R$ {salario_atual:.2f}\")\n",
+    "    ano_atual += 1"
+   ]
   }
  ],
  "metadata": {
