resolução exercicio para casa - professora

--- a/exercicios/para-casa/eliane-ferreira/exercicio_casa.ipynb
+++ b/exercicios/para-casa/eliane-ferreira/exercicio_casa.ipynb
@@ -55,6 +55,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "numero = int(input('Digite um número para ver sua tabuada'))\n",
+    "\n",
+    "inicio = int(input(\"Digite o valor inicial da tabuada\"))\n",
+    "\n",
+    "fim = int(input(\"Digite o valor final da tabuada\"))\n",
+    "\n",
+    "for i in range (inicio, fim +1):\n",
+    "    print(f\"{numero} x {i} = {numero * i}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    numero = int(input('Digite um número para ver sua tabuada'))\n",
+    "\n",
+    "    inicio = int(input(\"Digite o valor inicial da tabuada\"))\n",
+    "\n",
+    "    fim = int(input(\"Digite o valor final da tabuada\"))\n",
+    "\n",
+    "    for i in range (inicio, fim +1):\n",
+    "     print(f\"{numero} x {i} = {numero * i}\")\n",
+    "\n",
+    "    if inicio > fim:\n",
+    "        raise ValueError(\" o valor inicial deve ser menor ou igual ao valor final.\")\n",
+    "    \n",
+    "    for i in range(inicio, fim + 1):\n",
+    "        print(f\"{numero} x {i} = {numero * 1}\")\n",
+    "except ValueError as ve:\n",
+    "        print(\"f Entrada invalida: {ve}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -91,6 +132,22 @@
     "\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "num = int(input('Calcule o fatorial de :'))\n",
+    "\n",
+    "resultado = 1\n",
+    "\n",
+    "for i in range(1, num +1 ):\n",
+    "    resultado *= 1\n",
+    "\n",
+    "    print(f\"O fatorial é {num}\")"
    ]
   },
   {
@@ -150,6 +207,27 @@
     "resultado = novo_salario + 2 * 0.015\n",
     "print(f\"O salario com aumento dobrado é : {resultado}\" )\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "salario_inicial =  float(input(\"Digite o salário inicial do funcionário: \"))\n",
+    "ano_contratacao = 1995\n",
+    "ano_atual = 2024\n",
+    "percentual_aumento = 1.5/100\n",
+    "salario_atual = salario_inicial\n",
+    "for ano in range(ano_contratacao + 1, ano_atual + 1):\n",
+    "    if ano == 1996:\n",
+    "        salario_atual += salario_inicial * percentual_aumento\n",
+    "    else:\n",
+    "        percentual_aumento *= 2\n",
+    "        salario_atual += salario_inicial * percentual_aumento\n",
+    "        \n",
+    "print(f\"O salário atual do funcionario em {ano_atual} é R$ {salario_atual:.2f}\")"
    ]
   }
  ],
